<resources>
    <string name="app_name">MyEstate</string>

    <string name="facbook_app_id">191600838089755</string>
    <string name="Email">Email</string>
    <string name="login">Login</string>
    <string name="Password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="or">OR</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="sign_up">Sign Up</string>
</resources>
