<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:background="@drawable/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/black_trans"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.myestate.LoginActivity">


        <ImageView
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_13sdp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/act_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/Email"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_13sdp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/act_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textColor="@color/white"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/round_background"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/login"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/underline_background"
            android:gravity="center"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/sign_up"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/create_account"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/or"
            android:textSize="@dimen/_20sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></com.google.android.gms.common.SignInButton>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebookbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/_10sdp"></com.facebook.login.widget.LoginButton>



        </LinearLayout>
    </LinearLayout>
    </FrameLayout>
</layout>