<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/activity_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_trans"
        android:orientation="vertical"
        tools:context="com.myestate.SignUpActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_arrow_back_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sdp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_sendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_13sdp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/act_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_13sdp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/act_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_13sdp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/edtPhone"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_100sdp"
                android:layout_marginStart="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/round_background"
                android:gravity="center"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_varifyOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_13sdp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/edt_OTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:hint="Enter OTP" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/varify_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_100sdp"
                android:layout_marginStart="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/round_background"
                android:gravity="center"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="Varify"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp" />
        </LinearLayout>
    </LinearLayout>
</layout>